--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </div>
     <div class="w3-col m8 w3-container w3-section">
       <div class="w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker w3-hover-text-black" style="width:30px"></i> Old Kamal Hardware,Near Mahesh Marble ,RICO IND. Area,Kishangarh 305802<br>
+        <i class="fa fa-map-marker w3-hover-text-black" style="width:30px"></i> <a href="https://maps.app.goo.gl/zu1ARWZeXahmN5YW9" title="Priya Hardware & Spares Parts" class="w3-hover-opacity">Old Kamal Hardware,Near Mahesh Marble ,RICO IND. Area,Kishangarh 305802</a><br>
         <i class="fa fa-phone w3-hover-text-black" style="width:30px"></i> Phone: +91 9214803844<br>
         <i class="fa fa-envelope w3-hover-text-black" style="width:30px"> </i> Email: christianpecson.io@gmail.com<br>
       </div>
