--- a/index.html
+++ b/index.html
@@ -1,192 +1,41 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>PH-Priya Hardware & Spare Parts</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='https://www.w3schools.com/lib/w3.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
-
+  <title>JavaScript Learning Website</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<!-- Author: Christian Pecson -->
-<!-- Date: July 2, 2016 -->
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <ul class="w3-navbar" id="myNavbar">
-    <li><a href="#" class="w3-padding-large">
-      <svg class='logo' viewBox="0 0 346.000000 371.000000">
-        <g transform="translate(0.000000,371.000000) scale(0.100000,-0.100000)">
-            <path d="M1344 3424 c-198 -113 -370 -212 -384 -221 -14 -9 -200 -117 -415
-            -241 -214 -123 -393 -226 -397 -230 -3 -4 -9 -413 -13 -909 l-8 -901 39 -25
-            c22 -13 94 -56 161 -95 l121 -70 6 91 c4 77 27 1479 26 1658 l0 56 303 173
-            c298 171 691 399 735 426 l22 14 0 -644 0 -644 -347 -195 -348 -195 -7 -328
-            c-5 -181 -7 -398 -5 -482 l2 -154 168 -93 167 -93 0 474 0 473 128 70 c168 92
-            220 116 229 107 4 -4 9 -308 11 -676 l4 -669 71 -41 c101 -58 57 -77 707 298
-            157 91 439 254 628 364 l342 200 0 242 c0 134 -3 540 -7 904 l-6 662 -505 290
-            c-277 160 -506 289 -508 287 -3 -2 -7 -302 -11 -665 -6 -607 -5 -662 10 -668
-            18 -7 138 54 256 130 l73 47 -2 177 c-4 244 -1 364 9 381 9 15 40 -1 293 -150
-            l58 -34 0 -705 -1 -705 -150 -90 c-174 -104 -189 -111 -201 -93 -4 7 -8 183
-            -8 391 0 285 -3 377 -12 377 -7 0 -83 -39 -170 -87 l-158 -88 -2 -409 -3 -410
-            -75 -44 c-41 -25 -118 -67 -170 -95 l-95 -50 -8 44 c-5 24 -11 705 -14 1512
-            l-5 1468 -88 44 -87 44 -359 -205z"/>
-            <path d="M1075 2431 c-39 -21 -108 -61 -155 -88 l-85 -49 -3 -125 c-1 -68 1
-            -149 5 -179 12 -81 29 -79 193 23 l135 84 -2 164 c-1 90 -5 174 -10 186 -8 22
-            -8 22 -78 -16z"/>
-        </g>
-    </svg><span class="title"> Priya Hardware & Spare Parts</span>
-    </a></li>
-    <li class="w3-hide-small w3-right">
-      <a href="#contact" class="w3-padding-large">Contact</a>
-    </li>
-    <li class="w3-hide-small w3-right">
-      <a href="#portfolio" class="w3-padding-large">Portfolio</a>
-    </li>
-    <li class="w3-hide-small w3-right">
-      <a href="#about" class="w3-padding-large">About</a>
-    </li>
-  </ul>
-</div>
+  <header>
+    <h1>JavaScript Learning</h1>
+  </header>
 
-<!-- First Parallax Image with Logo Text -->
-<div class="bgimg-1 w3-opacity w3-display-container">
-  <div class="w3-display-middle" style="white-space:nowrap;">
-    <h1 class="w3-center w3-padding-xlarge w3-black w3-xlarge w3-wide w3-animate-opacity">PRIYA HARDWARE<span class="w3-hide-small"> & SPARE PARTS</span></h1>
-  </div>
-</div>
+  <nav>
+    <ul>
+      <li><a href="introduction.html">Introduction</a></li>
+      <li><a href="basics.html">JavaScript Basics</a></li>
+      <li><a href="functions.html">Functions</a></li>
+      <li><a href="objects.html">Objects</a></li>
+      <!-- Add more sections and topics as needed -->
+    </ul>
+  </nav>
 
-<!-- Container (About Section) -->
-<div class="w3-content w3-container w3-padding-64" id="about">
-  <h2 class="w3-center">ABOUT ME</h2>
-  <p class="w3-center"><em>I love Programming</em></p>
-  <p>I am Christian Pecson. I am a dreamer whose dream is to build awesome things in the future and to contribute something useful to the world.But hey this website symbolizes that I contribute something in the world.</p>
-  <!--  Profile Picture and Description  -->
-  <div class="w3-row">
-    <div class="w3-col m6 w3-center w3-section">
-      <img src="https://www.dropbox.com/s/mm2bb2xyftqn6am/profile%20%281%29.jpg?raw=1" id="profile" class="w3-circle" alt="Photo of Me">
-    </div>
-
-    <!-- Hide this text on small devices -->
-    <div class="w3-col m6 w3-hide-small w3-section">
-      <p>By the help of FreeCodeCamp I will be a Full Stack Web Developer soon!</p>
-    </div>
-  </div>
-</div>
-
-<!-- Second Parallax Image with Portfolio Text -->
-<div class="bgimg-2 w3-display-container" id="portfolio">
-  <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-light-grey w3-wide">PORTFOLIO</span>
-  </div>
-</div>
-
-<!-- Container (Portfolio Section) -->
-<div class="w3-content w3-container w3-padding-64">
-  <h2 class="w3-center">MY WORK</h2>
-  <p class="w3-center"><em>Here are some of my latest lorem work.<br> Click on the images to make them bigger</em></p><br>
-
-  <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
-  <div class="w3-row-padding w3-center">
-    <div class="w3-col m3">
-      <img src="images/6.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="https://unsplash.it/400/301?random" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="https://unsplash.it/400/302?random" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="https://unsplash.it/400/303?random" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
-    </div>
-  </div>
-
-  <div class="w3-row-padding w3-center w3-section">
-    <div class="w3-col m3">
-      <img src="https://unsplash.it/400/304?random" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="https://unsplash.it/400/305?random" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="https://unsplash.it/400/306?random" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="https://unsplash.it/400/307?random" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
-    </div>
-  </div>
-</div>
-
-<!-- Modal for full size images on click-->
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-closebtn w3-hover-red w3-text-white w3-xxxlarge w3-container w3-display-topright">×</span>
-  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-    <img id="img01" style="max-width:100%">
-  </div>
-</div>
-
-<!-- Third Parallax Image with Portfolio Text -->
-<div class="bgimg-3 w3-display-container" id="contact">
-  <div class="w3-display-middle">
-    <h2 class="w3-xxlarge w3-text-light-grey w3-wide">CONTACT</h2>
-  </div>
-</div>
-
-<!-- Container (Contact Section) -->
-<div class="w3-content w3-container w3-padding-64">
-  <h3 class="w3-center">WHERE I WORK</h3>
-  <p class="w3-center"><em>I'd love your feedback!</em></p>
-
-  <address class="w3-row w3-padding-32 w3-section">
-    <div class="w3-col m4 w3-container">
-      <!-- Add Google Maps -->
-      <div id="googleMap" class="w3-round-large"></div>
-    </div>
-    <div class="w3-col m8 w3-container w3-section">
-      <div class="w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker w3-hover-text-black" style="width:30px"></i> <a href="https://maps.app.goo.gl/zu1ARWZeXahmN5YW9" title="Priya Hardware & Spares Parts" class="w3-hover-opacity" target="_blank" >Old Kamal Hardware,Near Mahesh Marble ,RICO IND. Area,Kishangarh 305802</a><br>
-        <i class="fa fa-phone w3-hover-text-black" style="width:30px"></i> Phone: +91 9214803844<br>
-        <i class="fa fa-envelope w3-hover-text-black" style="width:30px"> </i> Email: christianpecson.io@gmail.com<br>
+  <main>
+    <div class="main-container">
+      <!-- Add links to different posts here -->
+      <div class="container">
+        <h2>Introduction to JavaScript</h2>
+        <p>Welcome to the JavaScript Learning website! JavaScript is a powerful programming language used for adding interactivity and dynamic behavior to websites.</p>
+        <a href="introduction.html">Read More</a>
       </div>
-      <p>Swing by for a cup of coffee, or leave me a note:</p>
-      <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-        <div class="w3-half">
-          <input class="w3-input w3-border w3-hover-light-grey" type="text" placeholder="Name">
-        </div>
-        <div class="w3-half">
-          <input class="w3-input w3-border w3-hover-light-grey" type="text" placeholder="Email">
-        </div>
-      </div>
-      <input class="w3-input w3-border w3-hover-light-grey" type="text" placeholder="Comment">
-      <a href="#" class="w3-btn w3-section w3-right">SEND</a>
+
+      <!-- Add more containers as needed -->
     </div>
-  </address>
-</div>
+  </main>
 
-<!-- Footer -->
-<footer class="w3-center w3-dark-grey w3-padding-48 w3-hover-black cf">
-  <div class="w3-half">
-    <a target="_blank" href="#">
-      <i class="fa fa-fire fa-2x"></i>
-    </a>
-    <a target="_blank" href="#">
-      <i class="fa fa-facebook fa-2x"></i>
-    </a>
-    <a target="_blank" href="#">
-      <i class="fa fa-codepen fa-2x"></i>
-    </a>
-  </div>
-  <p class="w3-half">Made with <span class="heart-icon">❤</span> by Christian Pecson and Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p>
-</footer>
-<!-- partial -->
-  <script src='https://maps.googleapis.com/maps/api/js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.4/SmoothScroll.min.js'></script><script  src="./script.js"></script>
+  <footer>
+    <p>&copy; 2023 JavaScript Learning. All rights reserved.</p>
+  </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
