--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <nav>
     <ul>
-      <li><a href="introduction.html">Introduction</a></li>
+      <li><a href="post/js/introduction.html">Introduction</a></li>
       <li><a href="basics.html">JavaScript Basics</a></li>
       <li><a href="functions.html">Functions</a></li>
       <li><a href="objects.html">Objects</a></li>
@@ -25,7 +25,7 @@
       <div class="container">
         <h2>Introduction to JavaScript</h2>
         <p>Welcome to the JavaScript Learning website! JavaScript is a powerful programming language used for adding interactivity and dynamic behavior to websites.</p>
-        <a href="introduction.html">Read More</a>
+        <a href="post/js/introduction.html">Read More</a>
       </div>
 
       <!-- Add more containers as needed -->
